UI id column overflow fix

--- a/src/main/webapp/styles.css
+++ b/src/main/webapp/styles.css
@@ -408,6 +408,7 @@ body {
 
 .result-list-id {
     width: 70px;
+    overflow: hidden;
 }
 
 .result-list-from {
